--- a/literature10-12.html
+++ b/literature10-12.html
@@ -328,15 +328,16 @@
 
             <!-- 10th Grade -->
             <div class="grade-section">
-                <h3>10th Grade - The British Novel</h3>
+                <h3>10th Grade - The British Victorian Age</h3>
                 <ul>
                     <li><strong>A Tale of Two Cities</strong> – Dickens’ historical novel of sacrifice and revolution in England and France.</li>
                     <li><strong>Wuthering Heights</strong> – Brontë’s gothic tale of passion and revenge on the Yorkshire moors.</li>
                     <li><strong>Pride and Prejudice</strong> – Austen’s witty exploration of love, class, and social expectations.</li>
                     <li><strong>Jane Eyre</strong> – Brontë’s story of resilience, independence, and romance in Victorian England.</li>
-                    <li><strong>Mrs. Dalloway</strong> – Woolf’s modernist novel on memory, time, and post-war life in London.</li>
-                    <li><strong>Lord of the Flies</strong> – Golding’s allegory of civilization’s collapse on a deserted island.</li>
-                    <li><strong>1984</strong> – Orwell’s dystopian vision of totalitarianism and surveillance in a futuristic society.</li>
+                    <li><strong>Victorian Poets</strong> - (Tennyson, Browning, et.al)</li>
+                    <li><strong>Victorian Playwrites</strong> - Wilde & Shaw</li>
+                    <li><strong>Brideshead Revisited</strong> – Waugh’s modern novel on memory, time, and loss of the Victorian Age.</li>
+                    
                 </ul>
             </div>
 
