--- a/k5-program.html
+++ b/k5-program.html
@@ -339,7 +339,7 @@
             <h3 class="text-2xl font-bold text-center mb-6">Core Subjects</h3>
             <div class="grid grid-cols-3 gap-6 mb-8">
                 <!-- Literature -->
-                <a href="k5-reading-list.html" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
+                <a href="k5-reading-list" class="subject-bubble flex flex-col items-center p-6 rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300">
                     <i class="fas fa-book mb-2"></i>
                     <h3>Literature</h3>
                 </a>
