--- a/literature10-12.html
+++ b/literature10-12.html
@@ -330,6 +330,7 @@
             <div class="grade-section">
                 <h3>10th Grade - The British Victorian Age</h3>
                 <ul>
+                    <li><strong>Pre-Victorian Literature</strong> - Pope's "Rape of the Lock" and "Dufoe's She Stoops to Consquor".</li>
                     <li><strong>A Tale of Two Cities</strong> – Dickens’ historical novel of sacrifice and revolution in England and France.</li>
                     <li><strong>Wuthering Heights</strong> – Brontë’s gothic tale of passion and revenge on the Yorkshire moors.</li>
                     <li><strong>Pride and Prejudice</strong> – Austen’s witty exploration of love, class, and social expectations.</li>
