--- a/k5-reading-list.html
+++ b/k5-reading-list.html
@@ -304,7 +304,7 @@
     <!-- Main Content -->
     <main>
         <section class="container mx-auto px-4">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-6">K-5 Reading List</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-6">K-5 Core Literature List</h2>
             <p class="mb-4">The K-5 reading list at Philo Classical Academy introduces young learners to timeless stories, fables, and classics that foster a love for reading while emphasizing virtue, courage, and wisdom. Each grade builds on the previous, encouraging moral reflection and historical awareness through engaging narratives.</p>
 
             <!-- Kindergarten -->
